[package]
name = "valenum"
version = "0.1.0"
authors = ["Markus Røyset <maroider@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"

[dev-dependencies]
dev_serde = { package = "serde", version = "1.0", features = ["derive"] }

[features]
serde = []
